[package]
name = "git-regraph"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"
description = "Edit your git graph cheaply without rebasing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-regraph-lib = {version = "0.1.0", path = "../lib"}
git2 = "0.13.20"
clap = "~2.33.3"
