[package]
name = "git-regraph-lib"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"
description = "Edit your git graph cheaply without rebasing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.20"
thiserror = "1.0"
tracing = "0.1.26"

[dev-dependencies]
tempfile = "3.2.0"
anyhow = "1.0"
crossterm = "0.20.0"
test-env-log = {version = "0.2.7", default-features = false, features = ["trace"]}
tracing-subscriber = "0.2.17"
